[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "poetry-core",
    "poetry-core>=1.0.0",
]
build-backend = "setuptools.build_meta"
# build-backend = "poetry.core.masonry.api"

[project]
name = "pytest-sandbox"
dynamic = [
    "version",
    "readme"
]
dependencies = [
    "pytest",
    "pytest-cov",
    "tealogger"
]
requires-python = ">= 3.10"
authors = [
    {name = "YTKme"},
]
description = "pytest Sandbox"
license = {file = "LICENSE"}
keywords = [
    "pytest",
    "sandbox"
]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
develop = [
    "build",
    "pytest-cov",
    "pytest",
    "ruff",
    "twine"
]
test = [
    "pytest-cov",
    "pytest",
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/YTKme/Python-pytest-Sandbox"
"Bug Tracker" = "https://github.com/YTKme/Python-pytest-Sandbox"

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff.format]
quote-style = "double"

[tool.setuptools]
packages = [
    "pytest_sandbox.alpha"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {file = "VERSION"}

[tool.poetry]
requires-poetry = ">=2.0"
