[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["pytest_sandbox"]
module-root = ""

[project]
name = "pytest-sandbox"
version = "0.0.11.dev20260118"
requires-python = ">= 3.11"
description = "pytest Sandbox"
license = {file = "LICENSE"}
keywords = [
    "pytest",
    "sandbox"
]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

authors = [{ name = "YTKme", email = "YTKme@Outlook.com" }]
maintainers = [{ name = "YTKme", email = "YTKme@Outlook.com" }]

dependencies = [
    "tealogger"
]

[dependency-groups]
develop = ["ruff>=0.14"]
test = [
  "pytest>=9.0",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7.0",
  "pytest-mock>=3.15",
  "tox>=4.34",
]

[project.urls]
"Homepage" = "https://github.com/YTKme/Python-pytest-Sandbox"
"Bug Tracker" = "https://github.com/YTKme/Python-pytest-Sandbox"

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff.format]
quote-style = "double"

[tool.setuptools]
packages = [
    "pytest_sandbox.alpha"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {file = "VERSION"}

[tool.poetry]
requires-poetry = ">=2.0"
